no classes, tokens

--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,17 +1,17 @@
 <div class="text-center">
     <h1 class="text-3xl font-semibold my-3">Angular Firebase Todo App</h1>
 
-    @if (us.user$().loading) {
+    @if (user().loading) {
 
     <p>Loading...</p>
 
-    } @else if (us.user$().data) {
+    } @else if (user().data) {
 
         <app-profile />
 
     } @else {
 
-    <button type="button" class="border p-2 rounded-md text-white bg-red-600" (click)="us.login()">
+    <button type="button" class="border p-2 rounded-md text-white bg-red-600" (click)="login()">
         Signin with Google
     </button>
 
