--- a/src/app/components/todo-form/todo-form.component.html
+++ b/src/app/components/todo-form/todo-form.component.html
@@ -1,4 +1,4 @@
-<form class="flex gap-3 items-center justify-center mt-5" (submit)="ts.addTodo($event, user().data?.uid)">
+<form class="flex gap-3 items-center justify-center mt-5" (submit)="addTodo($event)">
     <input class="border p-2" name="task" />
     <button class="border p-2 rounded-md text-white bg-sky-700" type="submit">
         Add Task
