--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -1,14 +1,26 @@
 <div>
     @if (!todos().loading) {
+
     <div class="grid grid-cols-[auto,auto,auto,auto] gap-3 justify-items-start">
+
         @for (todo of todos().data; track todo.id) {
+
         <app-todo-item class="contents" [todo]="todo" />
+
         } @empty {
+
         <p><b>Add your first todo item!</b></p>
+
         }
     </div>
     <app-todo-form />
+    } @else if (todos().error) {
+
+    <p class="text-red-500">Error: {{ todos().error?.message }}</p>
+
     } @else {
+
     <p>Loading...</p>
+
     }
 </div>
